<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<artifactId>afirma-ui-simpleafirma</artifactId>
	<packaging>jar</packaging>
	
	<name>afirma-ui-simpleafirma</name>
	<description>Aplicacion AutoFirma</description>
	
	<parent>
		<groupId>es.gob.afirma</groupId>
		<artifactId>afirma-client</artifactId>
		<version>1.8-SNAPSHOT</version>
	</parent>

	<properties>
		<afirma.keytool.keystore>${basedir}/afirma.keystore</afirma.keytool.keystore>
        <afirma.keytool.alias>codesign</afirma.keytool.alias>
        <afirma.keytool.password>afirma</afirma.keytool.password>
	</properties>

	<dependencies>
	
		<!--  Permite usar JPEG mal formados con PDFBox -->
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-jpeg</artifactId>
			<version>3.6</version>
		</dependency>
	    
	    <dependency>
			<groupId>com.dmurph</groupId>
  			<artifactId>JGoogleAnalyticsTracker</artifactId>
  			<version>1.2.0</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-ui-simpleafirma-plugins</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-core</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-ui-core-jse</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-ui-core-jse-keystores</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-core-keystores</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-keystores-filters</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-keystores-mozilla</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-core-pkcs7</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cms</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cades</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cades-multi</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-pdf</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-core-xml</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-xades</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-odf</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-ooxml</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cadestri-client</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-xadestri-client</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-padestri-client</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-xmlsignature</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-validation</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-core-massive</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-batch-client</artifactId>
			<version>${clienteafirma.version}</version>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>core</artifactId>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>prov</artifactId>
		</dependency>
		
		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma.jmulticard</groupId>
			<artifactId>jmulticard-jse</artifactId>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma.jmulticard</groupId>
			<artifactId>jmulticard-ui</artifactId>
		</dependency>

		<dependency>
		    <groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
 			<version>1.5.0</version>
		</dependency>

		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
    		<groupId>org.glassfish</groupId>
    		<artifactId>javax.json</artifactId>
    		<version>1.0.4</version>
		</dependency>

		<dependency>
			<groupId>javax.help</groupId>
			<artifactId>javahelp</artifactId>
			<version>2.0.05</version>
		</dependency>
		
		<dependency>
  			<groupId>org.apache.pdfbox</groupId>
  			<artifactId>pdfbox</artifactId>
  			<version>2.0.25</version>
  			<exclusions>
  				<exclusion>
           			<groupId>org.bouncycastle</groupId>
           			<artifactId>bcmail-jdk15</artifactId>
         		</exclusion>
            	<exclusion>
            		<groupId>org.bouncycastle</groupId>
            		<artifactId>bcprov-jdk15</artifactId>
  				</exclusion>
  				<exclusion>
  					<groupId>com.ibm.icu</groupId>
            		<artifactId>icu4j</artifactId>
  				</exclusion>
        	</exclusions>
		</dependency>
		
		<dependency>
			<groupId>com.github.markusbernhardt</groupId>
			<artifactId>proxy-vole</artifactId>
			<version>1.0.4</version>
		</dependency>

		<!-- Libreria "Java Native Access" -->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>5.6.0</version>
		</dependency>

	</dependencies>

	<profiles>
	
		<profile>
			<id>env-dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
      		</activation>
      		<build>
       			<plugins>
       				<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
							<fork>true</fork>
							<compilerArgument>-XDignore.symbol.file</compilerArgument>
						</configuration>
					</plugin>					

					<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<archive>
							<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
				</plugins>
			</build>
	    </profile>
	    
	    <profile>
	      <id>env-install</id>
	      <activation>
	        <property>
	          <name>env</name>
	          <value>install</value>
	        </property>
	      </activation>

	      <build>
	      	<finalName>AutoFirma</finalName>
       		<plugins>
     			<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<fork>true</fork>
						<compilerArgument>-XDignore.symbol.file</compilerArgument>
					</configuration>
				</plugin>
	
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
							<configuration>
								<transformers>
									<transformer
										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
										<manifestEntries>
											<Main-Class>es.gob.afirma.standalone.SimpleAfirma</Main-Class>
											<Permissions>all-permissions</Permissions>
										</manifestEntries>
									</transformer>
								</transformers>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
						<filters>
							<filter>
								<artifact>*:*</artifact>
								<excludes>
									<exclude>META-INF/*.SF</exclude>
									<exclude>META-INF/*.DSA</exclude>
									<exclude>META-INF/*.RSA</exclude>
									<exclude>*.crt</exclude>
								</excludes>
							</filter>
							<filter>
								<artifact>es.uji.crypto.xades:jxades</artifact>
								<excludes>
									<exclude>TrustRootCACertificates/**</exclude>
									<exclude>*.*</exclude>
								</excludes>
							</filter>
						</filters>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.1</version>
					<configuration>
						<archive>
							<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		  </build>
	    </profile>

	</profiles>

</project>
